Enhance accessibility and improve UI consistency by updating logo link structure, refining technology list capitalization, and adjusting CSS styles for better visual hierarchy.

--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
     <header class="site-header">
       <div class="wrapper" data-type="wide">
         <div class="site-header__inner">
-          <img
-            loading="lazy"
-            class="logo"
-            width="32"
-            height="32"
-            src="logo.svg"
-            alt="Antonio Poloni Logo"
-          />
+          <a href="/" aria-label="Antonio Poloni Portfolio Homepage">
+            <img
+              loading="lazy"
+              class="logo"
+              width="32"
+              height="32"
+              src="logo.svg"
+              alt="Antonio Poloni Logo"
+            />
+          </a>
 
           <button aria-controls="primary-navigation" aria-expanded="false">
             <span class="visually-hidden">Menu</span>
@@ -95,16 +97,16 @@
               </h3>
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
-                <li data-tech="next.js">next.js</li>
-                <li data-tech="react">react</li>
-                <li data-tech="typescript">typescript</li>
-                <li data-tech="tailwind-css">tailwind</li>
-                <li data-tech="next-intl">next-intl</li>
-                <li data-tech="github">github</li>
-                <li data-tech="accessibility">accessibility</li>
-                <li data-tech="ui-ux">ui-ux</li>
-                <li data-tech="git">git</li>
-                <li data-tech="vscode">vscode</li>
+                <li data-tech="next.js">Next.js</li>
+                <li data-tech="react">React</li>
+                <li data-tech="typescript">TypeScript</li>
+                <li data-tech="tailwind-css">Tailwind CSS</li>
+                <li data-tech="next-intl">Next Intl</li>
+                <li data-tech="github">GitHub</li>
+                <li data-tech="accessibility">Accessibility</li>
+                <li data-tech="ui-ux">UI/UX</li>
+                <li data-tech="git">Git</li>
+                <li data-tech="vscode">VSCode</li>
               </ul>
 
               <p>
@@ -149,21 +151,21 @@
               </h3>
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
-                <li data-tech="react">react</li>
-                <li data-tech="javascript">javascript</li>
-                <li data-tech="css">css</li>
-                <li data-tech="vite">vite</li>
-                <li data-tech="node.js">node.js</li>
-                <li data-tech="vitest">vitest</li>
-                <li data-tech="sqlite">sqlite</li>
-                <li data-tech="netlify">netlify</li>
-                <li data-tech="render">render</li>
-                <li data-tech="tanstack">tanstack</li>
-                <li data-tech="github">github</li>
-                <li data-tech="accessibility">accessibility</li>
-                <li data-tech="git">git</li>
-                <li data-tech="ui-ux">ui-ux</li>
-                <li data-tech="vscode">vscode</li>
+                <li data-tech="react">React</li>
+                <li data-tech="javascript">JavaScript</li>
+                <li data-tech="css">CSS</li>
+                <li data-tech="vite">Vite</li>
+                <li data-tech="node.js">Node.js</li>
+                <li data-tech="vitest">Vitest</li>
+                <li data-tech="sqlite">SQLite</li>
+                <li data-tech="netlify">Netlify</li>
+                <li data-tech="render">Render</li>
+                <li data-tech="tanstack">TanStack</li>
+                <li data-tech="github">GitHub</li>
+                <li data-tech="accessibility">Accessibility</li>
+                <li data-tech="git">Git</li>
+                <li data-tech="ui-ux">UI/UX</li>
+                <li data-tech="vscode">VSCode</li>
               </ul>
 
               <p>
@@ -222,7 +224,7 @@
               >Filter by Organization</label
             >
             <select name="organization" id="organization" hidden>
-              <option value="all">All Organizations</option>
+              <option value="all">All Orgs</option>
               <option value="frontend-masters">Frontend Masters</option>
               <option value="freecodecamp">freeCodeCamp</option>
             </select>
@@ -231,29 +233,29 @@
               >Filter by Technologies</label
             >
             <select name="tech" id="tech" hidden>
-              <option value="all">All Technologies</option>
-              <option value="accessibility">accessibility</option>
-              <option value="css">css</option>
-              <option value="figma">figma</option>
-              <option value="git">git</option>
-              <option value="github">github</option>
-              <option value="html">html</option>
-              <option value="javascript">javascript</option>
-              <option value="netlify">netlify</option>
-              <option value="next-intl">next-intl</option>
-              <option value="next.js">next.js</option>
-              <option value="node.js">node.js</option>
-              <option value="performance">performance</option>
-              <option value="react">react</option>
-              <option value="render">render</option>
-              <option value="sqlite">sqlite</option>
-              <option value="tailwind-css">tailwind-css</option>
-              <option value="tanstack">tanstack</option>
-              <option value="typescript">typescript</option>
-              <option value="ui-ux">ui-ux</option>
-              <option value="vite">vite</option>
-              <option value="vitest">vitest</option>
-              <option value="vscode">vscode</option>
+              <option value="all">All Tech</option>
+              <option value="accessibility">Accessibility</option>
+              <option value="css">CSS</option>
+              <option value="figma">Figma</option>
+              <option value="git">Git</option>
+              <option value="github">GitHub</option>
+              <option value="html">HTML</option>
+              <option value="javascript">JavaScript</option>
+              <option value="netlify">Netlify</option>
+              <option value="next-intl">Next Intl</option>
+              <option value="next.js">Next.js</option>
+              <option value="node.js">Node.js</option>
+              <option value="performance">Performance</option>
+              <option value="react">React</option>
+              <option value="render">Render</option>
+              <option value="sqlite">SQLite</option>
+              <option value="tailwind-css">Tailwind CSS</option>
+              <option value="tanstack">TanStack</option>
+              <option value="typescript">TypeScript</option>
+              <option value="ui-ux">UI/UX</option>
+              <option value="vite">Vite</option>
+              <option value="vitest">Vitest</option>
+              <option value="vscode">VSCode</option>
             </select>
           </div>
 
@@ -266,15 +268,15 @@
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
                 <li data-organization="frontend-masters">frontend masters</li>
-                <li data-tech="css">css</li>
-                <li data-tech="figma">figma</li>
-                <li data-tech="javascript">javascript</li>
-                <li data-tech="netlify">netlify</li>
-                <li data-tech="github">github</li>
-                <li data-tech="accessibility">accessibility</li>
-                <li data-tech="git">git</li>
-                <li data-tech="html">html</li>
-                <li data-tech="vscode">vscode</li>
+                <li data-tech="css">CSS</li>
+                <li data-tech="figma">Figma</li>
+                <li data-tech="javascript">JavaScript</li>
+                <li data-tech="netlify">Netlify</li>
+                <li data-tech="github">GitHub</li>
+                <li data-tech="accessibility">Accessibility</li>
+                <li data-tech="git">Git</li>
+                <li data-tech="html">HTML</li>
+                <li data-tech="vscode">VSCode</li>
               </ul>
 
               <p>
@@ -295,9 +297,9 @@
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
                 <li data-organization="frontend-masters">frontend masters</li>
-                <li data-tech="performance">performance</li>
-                <li data-tech="vscode">vscode</li>
-                <li data-tech="html">html</li>
+                <li data-tech="performance">Performance</li>
+                <li data-tech="vscode">VSCode</li>
+                <li data-tech="html">HTML</li>
               </ul>
 
               <p>
@@ -323,9 +325,9 @@
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
                 <li data-organization="frontend-masters">frontend masters</li>
-                <li data-tech="javascript">javascript</li>
-                <li data-tech="vscode">vscode</li>
-                <li data-tech="html">html</li>
+                <li data-tech="javascript">JavaScript</li>
+                <li data-tech="vscode">VSCode</li>
+                <li data-tech="html">HTML</li>
               </ul>
 
               <p>
@@ -350,16 +352,16 @@
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
                 <li data-organization="frontend-masters">frontend masters</li>
-                <li data-tech="react">react</li>
-                <li data-tech="vscode">vscode</li>
-                <li data-tech="html">html</li>
-                <li data-tech="javascript">javascript</li>
-                <li data-tech="tanstack">tanstack</li>
-                <li data-tech="vitest">vitest</li>
-                <li data-tech="vite">vite</li>
-                <li data-tech="netlify">netlify</li>
-                <li data-tech="render">render</li>
-                <li data-tech="github">github</li>
+                <li data-tech="react">React</li>
+                <li data-tech="vscode">VSCode</li>
+                <li data-tech="html">HTML</li>
+                <li data-tech="javascript">JavaScript</li>
+                <li data-tech="tanstack">TanStack</li>
+                <li data-tech="vitest">Vitest</li>
+                <li data-tech="vite">Vite</li>
+                <li data-tech="netlify">Netlify</li>
+                <li data-tech="render">Render</li>
+                <li data-tech="github">GitHub</li>
               </ul>
 
               <p>
@@ -388,7 +390,7 @@
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
                 <li data-organization="frontend-masters">frontend masters</li>
-                <li data-tech="javascript">javascript</li>
+                <li data-tech="javascript">JavaScript</li>
               </ul>
 
               <p>
@@ -412,7 +414,7 @@
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
                 <li data-organization="frontend-masters">frontend masters</li>
-                <li data-tech="javascript">javascript</li>
+                <li data-tech="javascript">JavaScript</li>
               </ul>
 
               <p>
@@ -438,8 +440,8 @@
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
                 <li data-organization="frontend-masters">frontend masters</li>
-                <li data-tech="accessibility">accessibility</li>
-                <li data-tech="html">html</li>
+                <li data-tech="accessibility">Accessibility</li>
+                <li data-tech="html">HTML</li>
               </ul>
 
               <p>
@@ -464,8 +466,8 @@
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
                 <li data-organization="frontend-masters">frontend masters</li>
-                <li data-tech="javascript">javascript</li>
-                <li data-tech="html">html</li>
+                <li data-tech="javascript">JavaScript</li>
+                <li data-tech="html">HTML</li>
               </ul>
 
               <p>
@@ -489,9 +491,9 @@
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
                 <li data-organization="frontend-masters">frontend masters</li>
-                <li data-tech="css">css</li>
-                <li data-tech="html">html</li>
-                <li data-tech="vscode">vscode</li>
+                <li data-tech="css">CSS</li>
+                <li data-tech="html">HTML</li>
+                <li data-tech="vscode">VSCode</li>
               </ul>
 
               <p>
@@ -515,7 +517,7 @@
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
                 <li data-organization="frontend-masters">frontend masters</li>
-                <li data-tech="javascript">javascript</li>
+                <li data-tech="javascript">JavaScript</li>
               </ul>
 
               <p>
@@ -540,10 +542,10 @@
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
                 <li data-organization="frontend-masters">frontend masters</li>
-                <li data-tech="css">css</li>
-                <li data-tech="html">html</li>
-                <li data-tech="vscode">vscode</li>
-                <li data-tech="github">github</li>
+                <li data-tech="css">CSS</li>
+                <li data-tech="html">HTML</li>
+                <li data-tech="vscode">VSCode</li>
+                <li data-tech="github">GitHub</li>
               </ul>
 
               <p>
@@ -567,10 +569,10 @@
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
                 <li data-organization="frontend-masters">frontend masters</li>
-                <li data-tech="html">html</li>
-                <li data-tech="css">css</li>
-                <li data-tech="javascript">javascript</li>
-                <li data-tech="vscode">vscode</li>
+                <li data-tech="html">HTML</li>
+                <li data-tech="css">CSS</li>
+                <li data-tech="javascript">JavaScript</li>
+                <li data-tech="vscode">VSCode</li>
               </ul>
 
               <p>
@@ -595,9 +597,9 @@
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
                 <li data-organization="freecodecamp">freecodecamp</li>
-                <li data-tech="html">html</li>
-                <li data-tech="css">css</li>
-                <li data-tech="javascript">javascript</li>
+                <li data-tech="html">HTML</li>
+                <li data-tech="css">CSS</li>
+                <li data-tech="javascript">JavaScript</li>
               </ul>
 
               <p>
@@ -622,8 +624,8 @@
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
                 <li data-organization="freecodecamp">freecodecamp</li>
-                <li data-tech="html">html</li>
-                <li data-tech="css">css</li>
+                <li data-tech="html">HTML</li>
+                <li data-tech="css">CSS</li>
               </ul>
 
               <p>
@@ -649,9 +651,9 @@
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
                 <li data-organization="frontend-masters">frontend masters</li>
-                <li data-tech="html">html</li>
-                <li data-tech="css">css</li>
-                <li data-tech="javascript">javascript</li>
+                <li data-tech="html">HTML</li>
+                <li data-tech="css">CSS</li>
+                <li data-tech="javascript">JavaScript</li>
               </ul>
 
               <p>
@@ -789,7 +791,12 @@
           </li>
         </ul>
 
-        <p><span class="text-brand">Antonio Poloni</span> © 2025</p>
+        <p>
+          <a href="/" aria-label="Antonio Poloni Portfolio Homepage"
+            >Antonio Poloni</a
+          >
+          © 2025
+        </p>
       </div>
     </footer>
   </body>
