fix: correct capitalization of "Frontend Masters" and "freeCodeCamp" in tag lists

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
               </h3>
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
-                <li data-organization="frontend-masters">frontend masters</li>
+                <li data-organization="frontend-masters">Frontend Masters</li>
                 <li data-tech="css">CSS</li>
                 <li data-tech="figma">Figma</li>
                 <li data-tech="javascript">JavaScript</li>
@@ -296,7 +296,7 @@
               </h3>
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
-                <li data-organization="frontend-masters">frontend masters</li>
+                <li data-organization="frontend-masters">Frontend Masters</li>
                 <li data-tech="performance">Performance</li>
                 <li data-tech="vscode">VSCode</li>
                 <li data-tech="html">HTML</li>
@@ -324,7 +324,7 @@
               </h3>
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
-                <li data-organization="frontend-masters">frontend masters</li>
+                <li data-organization="frontend-masters">Frontend Masters</li>
                 <li data-tech="javascript">JavaScript</li>
                 <li data-tech="vscode">VSCode</li>
                 <li data-tech="html">HTML</li>
@@ -351,7 +351,7 @@
               </h3>
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
-                <li data-organization="frontend-masters">frontend masters</li>
+                <li data-organization="frontend-masters">Frontend Masters</li>
                 <li data-tech="react">React</li>
                 <li data-tech="vscode">VSCode</li>
                 <li data-tech="html">HTML</li>
@@ -389,7 +389,7 @@
               </h3>
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
-                <li data-organization="frontend-masters">frontend masters</li>
+                <li data-organization="frontend-masters">Frontend Masters</li>
                 <li data-tech="javascript">JavaScript</li>
               </ul>
 
@@ -413,7 +413,7 @@
               </h3>
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
-                <li data-organization="frontend-masters">frontend masters</li>
+                <li data-organization="frontend-masters">Frontend Masters</li>
                 <li data-tech="javascript">JavaScript</li>
               </ul>
 
@@ -439,7 +439,7 @@
               </h3>
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
-                <li data-organization="frontend-masters">frontend masters</li>
+                <li data-organization="frontend-masters">Frontend Masters</li>
                 <li data-tech="accessibility">Accessibility</li>
                 <li data-tech="html">HTML</li>
               </ul>
@@ -465,7 +465,7 @@
               </h3>
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
-                <li data-organization="frontend-masters">frontend masters</li>
+                <li data-organization="frontend-masters">Frontend Masters</li>
                 <li data-tech="javascript">JavaScript</li>
                 <li data-tech="html">HTML</li>
               </ul>
@@ -490,7 +490,7 @@
               </h3>
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
-                <li data-organization="frontend-masters">frontend masters</li>
+                <li data-organization="frontend-masters">Frontend Masters</li>
                 <li data-tech="css">CSS</li>
                 <li data-tech="html">HTML</li>
                 <li data-tech="vscode">VSCode</li>
@@ -516,7 +516,7 @@
               </h3>
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
-                <li data-organization="frontend-masters">frontend masters</li>
+                <li data-organization="frontend-masters">Frontend Masters</li>
                 <li data-tech="javascript">JavaScript</li>
               </ul>
 
@@ -541,7 +541,7 @@
               </h3>
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
-                <li data-organization="frontend-masters">frontend masters</li>
+                <li data-organization="frontend-masters">Frontend Masters</li>
                 <li data-tech="css">CSS</li>
                 <li data-tech="html">HTML</li>
                 <li data-tech="vscode">VSCode</li>
@@ -568,7 +568,7 @@
               </h3>
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
-                <li data-organization="frontend-masters">frontend masters</li>
+                <li data-organization="frontend-masters">Frontend Masters</li>
                 <li data-tech="html">HTML</li>
                 <li data-tech="css">CSS</li>
                 <li data-tech="javascript">JavaScript</li>
@@ -596,7 +596,7 @@
               </h3>
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
-                <li data-organization="freecodecamp">freecodecamp</li>
+                <li data-organization="freecodecamp">freeCodeCamp</li>
                 <li data-tech="html">HTML</li>
                 <li data-tech="css">CSS</li>
                 <li data-tech="javascript">JavaScript</li>
@@ -623,7 +623,7 @@
               </h3>
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
-                <li data-organization="freecodecamp">freecodecamp</li>
+                <li data-organization="freecodecamp">freeCodeCamp</li>
                 <li data-tech="html">HTML</li>
                 <li data-tech="css">CSS</li>
               </ul>
@@ -650,7 +650,7 @@
               </h3>
 
               <ul class="tag-list" role="list" aria-label="Technologies used">
-                <li data-organization="frontend-masters">frontend masters</li>
+                <li data-organization="frontend-masters">Frontend Masters</li>
                 <li data-tech="html">HTML</li>
                 <li data-tech="css">CSS</li>
                 <li data-tech="javascript">JavaScript</li>
