feat: add the Full Stack course and new technologies badges

--- a/index.html
+++ b/index.html
@@ -256,10 +256,46 @@
               <option value="vite">Vite</option>
               <option value="vitest">Vitest</option>
               <option value="vscode">VSCode</option>
+              <option value="express">Express.js</option>
+              <option value="linux">Linux</option>
+              <option value="docker">Docker</option>
+              <option value="nginx">Nginx</option>
             </select>
           </div>
 
           <div class="grid-auto-fill" data-card="medium">
+            <div class="card">
+              <h3 class="card__title">
+                Full Stack for Front-End Engineers, v3
+                <p class="text-brand">Jem Young</p>
+              </h3>
+
+              <ul class="tag-list" role="list" aria-label="Technologies used">
+                <li data-organization="frontend-masters">Frontend Masters</li>
+                <li data-tech="github">GitHub</li>
+                <li data-tech="git">Git</li>
+                <li data-tech="html">HTML</li>
+                <li data-tech="javascript">JavaScript</li>
+                <li data-tech="vscode">VSCode</li>
+                <li data-tech="sqlite">SQLite</li>
+                <li data-tech="node.js">Node.js</li>
+                <li data-tech="express">Express.js</li>
+                <li data-tech="linux">Linux</li>
+                <li data-tech="docker">Docker</li>
+                <li data-tech="nginx">Nginx</li>
+              </ul>
+
+              <p>
+                I gained a solid understanding of full-stack engineering by
+                setting up servers, deploying web apps, and managing networking
+                and security. I worked with the command line, set up CI/CD
+                pipelines, managed databases, and built containerized
+                applications. This hands-on experience gave me the confidence
+                and skills to build, deploy, and manage complete web
+                applications from scratch.
+              </p>
+            </div>
+
             <div class="card">
               <h3 class="card__title">
                 Professional CSS: Build a Website from Scratch
