feat: add TypeScript 5+ Fundamentals course

--- a/index.html
+++ b/index.html
@@ -266,6 +266,28 @@
           <div class="grid-auto-fill" data-card="medium">
             <div class="card">
               <h3 class="card__title">
+                TypeScript 5+ Fundamentals, v4
+                <p class="text-brand">Mike North</p>
+              </h3>
+
+              <ul class="tag-list" role="list" aria-label="Technologies used">
+                <li data-organization="frontend-masters">Frontend Masters</li>
+                <li data-tech="typescript">TypeScript</li>
+                <li data-tech="vscode">VSCode</li>
+              </ul>
+
+              <p>
+                I learned key TypeScript features like variable typing, function
+                signatures, union and intersection types, type aliases, and
+                generics. I also gained experience transitioning JavaScript
+                codebases to TypeScript, which improved code reliability and
+                maintainability. These skills help me write more robust,
+                scalable applications.
+              </p>
+            </div>
+
+            <div class="card">
+              <h3 class="card__title">
                 Full Stack for Front-End Engineers, v3
                 <p class="text-brand">Jem Young</p>
               </h3>
