feat: add Testing Fundamentals course

--- a/index.html
+++ b/index.html
@@ -266,6 +266,30 @@
           <div class="grid-auto-fill" data-card="medium">
             <div class="card">
               <h3 class="card__title">
+                Testing Fundamentals
+                <p class="text-brand">Steve Kinney</p>
+              </h3>
+
+              <ul class="tag-list" role="list" aria-label="Technologies used">
+                <li data-organization="frontend-masters">Frontend Masters</li>
+                <li data-tech="vitest">Vitest</li>
+                <li data-tech="javascript">Javascript</li>
+                <li data-tech="node.js">Node.js</li>
+                <li data-tech="vscode">VSCode</li>
+              </ul>
+
+              <p>
+                I learned the fundamentals of testing and Test-Driven
+                Development, writing automated tests for DOM elements and user
+                interactions. I gained experience using mocks and spies to test
+                complex code, and practiced writing both unit and integration
+                tests with common testing tools. These skills improved my
+                ability to ship reliable, maintainable code.
+              </p>
+            </div>
+
+            <div class="card">
+              <h3 class="card__title">
                 TypeScript 5+ Fundamentals, v4
                 <p class="text-brand">Mike North</p>
               </h3>
