feat: add Functional JavaScript First Steps course and Beginner / Professional Learning Paths

--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
             >
             <select name="organization" id="organization" hidden>
               <option value="all">All Orgs</option>
-              <option value="frontend-masters">Frontend Masters</option>
               <option value="freecodecamp">freeCodeCamp</option>
+              <option value="frontend-masters">Frontend Masters</option>
             </select>
 
             <label for="tech" class="visually-hidden"
@@ -236,14 +236,18 @@
               <option value="all">All Tech</option>
               <option value="accessibility">Accessibility</option>
               <option value="css">CSS</option>
+              <option value="docker">Docker</option>
+              <option value="express">Express.js</option>
               <option value="figma">Figma</option>
               <option value="git">Git</option>
               <option value="github">GitHub</option>
               <option value="html">HTML</option>
               <option value="javascript">JavaScript</option>
+              <option value="linux">Linux</option>
               <option value="netlify">Netlify</option>
               <option value="next-intl">Next Intl</option>
               <option value="next.js">Next.js</option>
+              <option value="nginx">Nginx</option>
               <option value="node.js">Node.js</option>
               <option value="performance">Performance</option>
               <option value="react">React</option>
@@ -256,14 +260,57 @@
               <option value="vite">Vite</option>
               <option value="vitest">Vitest</option>
               <option value="vscode">VSCode</option>
-              <option value="express">Express.js</option>
-              <option value="linux">Linux</option>
-              <option value="docker">Docker</option>
-              <option value="nginx">Nginx</option>
             </select>
           </div>
 
           <div class="grid-auto-fill" data-card="medium">
+            <div class="card">
+              <h3 class="card__title">
+                Professional Learning Path
+                <p class="text-brand">Frontend Masters</p>
+              </h3>
+
+              <ul class="tag-list" role="list" aria-label="Technologies used">
+                <li data-organization="frontend-masters">Frontend Masters</li>
+                <li data-tech="javascript">Javascript</li>
+                <li data-tech="react">React</li>
+                <li data-tech="performance">Performance</li>
+                <li data-tech="css">CSS</li>
+                <li data-tech="typescript">TypeScript</li>
+              </ul>
+
+              <p>
+                I completed a comprehensive learning path covering advanced
+                JavaScript, React, web performance, modern CSS, deployment
+                strategies, TypeScript, and functional programming. This journey
+                gave me practical experience and in-depth skills needed to excel
+                as a professional web developer and prepared me for senior-level
+                roles.
+              </p>
+            </div>
+
+            <div class="card">
+              <h3 class="card__title">
+                Functional JavaScript First Steps, v2
+                <p class="text-brand">Anjana Vakil</p>
+              </h3>
+
+              <ul class="tag-list" role="list" aria-label="Technologies used">
+                <li data-organization="frontend-masters">Frontend Masters</li>
+                <li data-tech="javascript">Javascript</li>
+                <li data-tech="vscode">VSCode</li>
+              </ul>
+
+              <p>
+                I learned functional programming fundamentals in JavaScript,
+                including pure functions, higher-order functions, and functional
+                composition. I practiced writing reliable code by avoiding
+                mutations, and explored the differences between iterative and
+                recursive solutions. This experience helped me write more
+                predictable and maintainable JavaScript applications.
+              </p>
+            </div>
+
             <div class="card">
               <h3 class="card__title">
                 Testing Fundamentals
@@ -511,6 +558,28 @@
                 mental models for tackling complex problems and improved my
                 overall confidence when working with JavaScript in real-world
                 scenarios.
+              </p>
+            </div>
+
+            <div class="card">
+              <h3 class="card__title">
+                Beginner Learning Path
+                <p class="text-brand">Frontend Masters</p>
+              </h3>
+
+              <ul class="tag-list" role="list" aria-label="Technologies used">
+                <li data-organization="frontend-masters">Frontend Masters</li>
+                <li data-tech="html">HTML</li>
+                <li data-tech="css">CSS</li>
+                <li data-tech="javascript">Javascript</li>
+                <li data-tech="accessibility">Accessibility</li>
+              </ul>
+
+              <p>
+                Completed a beginner learning path covering web development
+                fundamentals, JavaScript, and modern CSS layout techniques.
+                Gained practical skills to build responsive websites and a solid
+                foundation for a career as a professional web developer.
               </p>
             </div>
 
