feat: add Intermediate React course card

--- a/index.html
+++ b/index.html
@@ -266,6 +266,31 @@
           <div class="grid-auto-fill" data-card="medium">
             <div class="card">
               <h3 class="card__title">
+                Intermediate React, v6
+                <p class="text-brand">Brian Holt</p>
+              </h3>
+
+              <ul class="tag-list" role="list" aria-label="Technologies used">
+                <li data-organization="frontend-masters">Frontend Masters</li>
+                <li data-tech="react">React</li>
+                <li data-tech="next.js">Next.js</li>
+                <li data-tech="performance">Performance</li>
+                <li data-tech="vscode">VSCode</li>
+                <li data-tech="ui-ux">UI/UX</li>
+              </ul>
+
+              <p>
+                Mastered React 19 by building high-performance apps with React
+                Server Components, both with and without Next.js. Gained
+                experience with static site generation, server-side rendering,
+                and optimizing performance using transitions and deferred
+                values. Developed the skills and confidence to lead complex
+                React projects.
+              </p>
+            </div>
+
+            <div class="card">
+              <h3 class="card__title">
                 Professional Learning Path
                 <p class="text-brand">Frontend Masters</p>
               </h3>
