--- a/index.html
+++ b/index.html
@@ -266,6 +266,30 @@
           <div class="grid-auto-fill" data-card="medium">
             <div class="card">
               <h3 class="card__title">
+                Next.js Fundamentals, v4
+                <p class="text-brand">Scott Moss</p>
+              </h3>
+
+              <ul class="tag-list" role="list" aria-label="Technologies used">
+                <li data-organization="frontend-masters">Frontend Masters</li>
+                <li data-tech="next.js">Next.js</li>
+                <li data-tech="react">React</li>
+                <li data-tech="vscode">VSCode</li>
+                <li data-tech="vitest">Vitest</li>
+              </ul>
+
+              <p>
+                Mastered building advanced Next.js apps, including React Server
+                Components, Server Actions, and both static and dynamic routing.
+                Implemented features like authentication, caching with
+                dynamicIO, and edge functions. Gained hands-on experience
+                deploying Next.js apps to Vercel, showcasing professional-level
+                skills in modern web development.
+              </p>
+            </div>
+
+            <div class="card">
+              <h3 class="card__title">
                 Intermediate React, v6
                 <p class="text-brand">Brian Holt</p>
               </h3>
