feat: add React and TypeScript course card

--- a/index.html
+++ b/index.html
@@ -266,6 +266,29 @@
           <div class="grid-auto-fill" data-card="medium">
             <div class="card">
               <h3 class="card__title">
+                React and TypeScript, v3
+                <p class="text-brand">Steve Kinney</p>
+              </h3>
+
+              <ul class="tag-list" role="list" aria-label="Technologies used">
+                <li data-organization="frontend-masters">Frontend Masters</li>
+                <li data-tech="react">React</li>
+                <li data-tech="typescript">TypeScript</li>
+                <li data-tech="next.js">Next.js</li>
+              </ul>
+
+              <p>
+                Built server-first React apps with TypeScript using actions,
+                streaming, ergonomic Server Components, and scalable typing.
+                Applied Suspense, action-based mutations, and optimistic UI
+                patterns to deliver fast, resilient experiences. Completed an
+                end-to-end, strongly-typed feature with accessible UI and a
+                clear testing strategy.
+              </p>
+            </div>
+
+            <div class="card">
+              <h3 class="card__title">
                 Next.js Fundamentals, v4
                 <p class="text-brand">Scott Moss</p>
               </h3>
