feat: add Enterprise UI Development course card

--- a/index.html
+++ b/index.html
@@ -266,6 +266,31 @@
           <div class="grid-auto-fill" data-card="medium">
             <div class="card">
               <h3 class="card__title">
+                Enterprise UI Development: Testing & Code Quality
+                <p class="text-brand">Steve Kinney</p>
+              </h3>
+
+              <ul class="tag-list" role="list" aria-label="Technologies used">
+                <li data-organization="frontend-masters">Frontend Masters</li>
+                <li data-tech="react">React</li>
+                <li data-tech="vitest">Vitest</li>
+                <li data-tech="github">GitHub</li>
+                <li data-tech="vscode">VSCode</li>
+              </ul>
+
+              <p>
+                Built scalable enterprise UI applications with a strong focus on
+                testing and code quality. Implemented unit and component tests
+                using Vitest, enforced accessibility standards with Axe, and
+                applied mocking strategies for reliable test coverage. Set up
+                continuous integration with GitHub Actions and standardized code
+                quality using ESLint, Husky, and lint-staged to support
+                long-term maintainability and team scalability.
+              </p>
+            </div>
+
+            <div class="card">
+              <h3 class="card__title">
                 React and TypeScript, v3
                 <p class="text-brand">Steve Kinney</p>
               </h3>
