feat: add TypeScript course card with details and technologies

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -264,6 +264,31 @@
           </div>
 
           <div class="grid-auto-fill" data-card="medium">
+            <div class="card">
+              <h3 class="card__title">
+                TypeScript: From First Steps to Professional
+                <p class="text-brand">Anjana Vakil</p>
+              </h3>
+
+              <ul class="tag-list" role="list" aria-label="Technologies used">
+                <li data-organization="frontend-masters">Frontend Masters</li>
+                <li data-tech="typescript">TypeScript</li>
+                <li data-tech="javascript">JavaScript</li>
+                <li data-tech="vscode">VSCode</li>
+              </ul>
+
+              <p>
+                Learned how to transition from JavaScript to TypeScript and
+                apply static typing across real projects. Added type
+                annotations, interfaces, unions, and generics to improve code
+                safety and predictability. Configured the TypeScript compiler
+                and tsconfig for scalable setups and practiced strong typing
+                with real examples. Explored workflows for type checking,
+                project conversion, and end-to-end type safety to write cleaner,
+                more maintainable frontend code
+              </p>
+            </div>
+
             <div class="card">
               <h3 class="card__title">
                 Enterprise UI Development: Testing & Code Quality
